habridge/node-red-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: node-red
  name: node-red
  namespace: homeautomation
spec:
  ports:
  - name: "1880"
    port: 1880
    targetPort: 1880
  selector:
    io.kompose.service: node-red
status:
  loadBalancer: {}
